--- a/package.json
+++ b/package.json
@@ -33,6 +33,46 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "react-hot-loader": "^1.3.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "connect-mongo": "^1.2.1",
+    "express": "^4.14.0",
+    "express-session": "^1.14.0",
+    "fs": "0.0.1-security",
+    "google-documents-api": "^0.3.0",
+    "install": "^0.10.1",
+    "jquery": "^3.2.1",
+    "mongoose": "^4.5.3",
+    "morgan": "^1.7.0",
+    "npm": "^5.0.4",
+    "react": "^0.14.8",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-transition-group": "^15.5.2",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^0.14.8",
+    "react-icons-kit": "^1.0.7",
+    "react-modal-dialog": "^4.0.7",
+    "react-pdf": "^1.6.1",
+    "react-player": "^0.18.0",
+    "react-redux": "^4.4.8",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-scrolling-container": "^1.0.1",
+    "react-sidenav": "^2.1.1",
+    "react-slick": "^0.14.11",
+    "react-transition-group": "^1.2.0",
+    "reactstrap": "^4.7.0",
+    "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
+    "underscore": "^1.8.3",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.0"
   }
 }
