--- a/package.json
+++ b/package.json
@@ -16,20 +16,23 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "connect-mongo": "^1.2.1",
+    "css-loader": "^0.28.4",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "fs": "0.0.1-security",
     "google-documents-api": "^0.3.0",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
+    "node-sass": "^4.5.3",
     "npm": "^5.0.4",
     "prop-types": "^15.5.10",
     "react": "^0.14.8",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
-    "react-bootstrap": "^0.31.0",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^0.14.8",
     "react-icons-kit": "^1.0.7",
     "react-interactive": "^0.6.5",
@@ -48,7 +51,10 @@
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "underscore": "^1.8.3",
+    "webpack": "^2.2.0-rc.4",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.0"
   },
@@ -59,11 +65,14 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5",
     "babel-preset-es2015": "^6.0.15",
